fix typos, etc.