@@ -96,7 +96,7 @@ under the License.
     <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
     <maven-gpg-plugin.version>3.2.3</maven-gpg-plugin.version>
     <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
     <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
     <maven-remote-resources-plugin.version>3.2.0</maven-remote-resources-plugin.version>
     <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
@@ -229,8 +229,14 @@ under the License.
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>${maven-javadoc-plugin.version}</version>
           <configuration>
-            <docfilessubdirs>true</docfilessubdirs>
+            <show>public</show>
+            <packages>org.apache.datasketches.memory</packages>
+            <excludePackageNames>org.apache.datasketches.memory/internal</excludePackageNames>
+            <additionalOptions>
+              <additionalOption>--add-modules=jdk.incubator.foreign</additionalOption>
+            </additionalOptions>
           </configuration>
+            
           <executions>
             <execution>
               <id>attach-javadocs</id>
@@ -274,6 +280,7 @@ under the License.
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
+			<argLine>--add-modules=jdk.incubator.foreign</argLine>
             <trimStackTrace>false</trimStackTrace>
             <useManifestOnlyJar>false</useManifestOnlyJar>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
